--- a/roles/llm_tools/templates/litellm_config.yaml.j2
+++ b/roles/llm_tools/templates/litellm_config.yaml.j2
@@ -69,3 +69,5 @@ litellm_settings:
 
 general_settings:
   master_key: "{{ litellm_master_key }}"
+  store_model_in_db: true
+  store_prompts_in_spend_logs: true
