--- a/roles/llm_tools/templates/litellm_config.yaml.j2
+++ b/roles/llm_tools/templates/litellm_config.yaml.j2
@@ -66,6 +66,7 @@ router_settings:
 
 litellm_settings:
   callbacks: ["arize_phoenix"]
+  drop_params: true
 
 general_settings:
   master_key: "{{ litellm_master_key }}"
