--- a/roles/llm_tools/templates/litellm_config.yaml.j2
+++ b/roles/llm_tools/templates/litellm_config.yaml.j2
@@ -7,9 +7,12 @@ model_list:
       model: "openai/{{ model.alias }}"
       api_base: "http://{{ ollama_host }}:{{ llamaswap_port }}/v1"
       api_key: "llama-swap"
-      {% if model.allowed_openai_params is defined -%}
+{% if model.allowed_openai_params is defined %}
       allowed_openai_params: {{ model.allowed_openai_params }}
-      {% endif -%}
+{% endif %}
+{% if model.encoding_format is defined %}
+      encoding_format: {{ model.encoding_format }}
+{% endif %}
     model_info:
       supports_function_calling: {{ model.supports_function_calling | lower }}
       supports_vision: {{ model.supports_vision | lower }}
